; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-http-authorize.c_destroy_realm_file.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-http-authorize.c_destroy_realm_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }
%struct.realm_password_file_t = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cache_entry*, i8*)* @destroy_realm_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy_realm_file(%struct.cache_entry* %0, i8* %1) #0 {
  %3 = alloca %struct.cache_entry*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.realm_password_file_t*, align 8
  store %struct.cache_entry* %0, %struct.cache_entry** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %7 = bitcast %struct.cache_entry* %6 to %struct.realm_password_file_t*
  store %struct.realm_password_file_t* %7, %struct.realm_password_file_t** %5, align 8
  %8 = load %struct.realm_password_file_t*, %struct.realm_password_file_t** %5, align 8
  %9 = getelementptr inbounds %struct.realm_password_file_t, %struct.realm_password_file_t* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @hash_free(i32 %10)
  %12 = load %struct.realm_password_file_t*, %struct.realm_password_file_t** %5, align 8
  %13 = call i32 @free(%struct.realm_password_file_t* %12)
  ret void
}

declare dso_local i32 @hash_free(i32) #1

declare dso_local i32 @free(%struct.realm_password_file_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
